Unified: Refresh system tray upon locale change during OOBE.

In OOBE, the UI locale can be updated by the "Choose language and
keyboard" menu, and it's instantly reflected to the UI without
rebooting the session. The unified system tray is also shown in OOBE.
Layout of the shelf needs to be updated based on if the language is
left-to-right or right-to-left.

Test: Manually verified as noted in the bug.
Bug: 867832
Change-Id: I38de2baa21a6333b28c04c1d5b157910042ca3f4
Reviewed-on: https://chromium-review.googlesource.com/c/1332971
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613911}