ash/mojo_interface_factory.cc
@@ -37,7 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/shell.h"
 #include "ash/shell_delegate.h"
 #include "ash/shutdown_controller.h"
-#include "ash/system/locale/locale_notification_controller.h"
+#include "ash/system/locale/locale_update_controller.h"
 #include "ash/system/message_center/message_center_controller.h"
 #include "ash/system/model/system_tray_model.h"
 #include "ash/system/network/vpn_list.h"
@@ -163,10 +163,9 @@ void BindKeyboardControllerRequestOnMainThread(
   Shell::Get()->ash_keyboard_controller()->BindRequest(std::move(request));
 }
 
-void BindLocaleNotificationControllerOnMainThread(
-    mojom::LocaleNotificationControllerRequest request) {
-  Shell::Get()->locale_notification_controller()->BindRequest(
-      std::move(request));
+void BindLocaleUpdateControllerOnMainThread(
+    mojom::LocaleUpdateControllerRequest request) {
+  Shell::Get()->locale_update_controller()->BindRequest(std::move(request));
 }
 
 void BindLockScreenRequestOnMainThread(mojom::LoginScreenRequest request) {
@@ -317,7 +316,7 @@ void RegisterInterfaces(
       base::BindRepeating(&BindKeyboardControllerRequestOnMainThread),
       main_thread_task_runner);
   registry->AddInterface(
-      base::BindRepeating(&BindLocaleNotificationControllerOnMainThread),
+      base::BindRepeating(&BindLocaleUpdateControllerOnMainThread),
       main_thread_task_runner);
   registry->AddInterface(
       base::BindRepeating(&BindLockScreenRequestOnMainThread),
