ash/shelf/shelf_layout_manager.h
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/session/session_observer.h"
 #include "ash/shelf/shelf.h"
 #include "ash/shell_observer.h"
+#include "ash/system/locale/locale_update_controller.h"
 #include "ash/wallpaper/wallpaper_controller_observer.h"
 #include "ash/wm/lock_state_observer.h"
 #include "ash/wm/wm_snap_to_pixel_layout_manager.h"
@@ -56,7 +57,8 @@ class ASH_EXPORT ShelfLayoutManager
       public wm::WmSnapToPixelLayoutManager,
       public display::DisplayObserver,
       public SessionObserver,
-      public WallpaperControllerObserver {
+      public WallpaperControllerObserver,
+      public LocaleChangeObserver {
  public:
   // The snapping threshold for dragging app list from shelf in tablet mode,
   // measured in DIPs.
@@ -232,6 +234,9 @@ class ASH_EXPORT ShelfLayoutManager
 
   // Updates the background of the shelf if it has changed.
   void MaybeUpdateShelfBackground(AnimationChangeType change_type);
+
+  // LocaleChangeObserver:
+  void OnLocaleChanged() override;
 
  private:
   class UpdateShelfObserver;
