ash/system/locale/locale_update_controller.cc
@@ -2,16 +2,19 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#include "ash/system/locale/locale_notification_controller.h"
+#include "ash/system/locale/locale_update_controller.h"
 
 #include <memory>
 #include <utility>
 
 #include "ash/public/cpp/notification_utils.h"
 #include "ash/public/cpp/vector_icons/vector_icons.h"
+#include "ash/session/session_controller.h"
+#include "ash/shell.h"
 #include "ash/strings/grit/ash_strings.h"
 #include "ash/system/tray/system_tray_notifier.h"
 #include "base/strings/string16.h"
+#include "components/session_manager/session_manager_types.h"
 #include "ui/base/l10n/l10n_util.h"
 #include "ui/message_center/message_center.h"
 #include "ui/message_center/public/cpp/notification.h"
@@ -19,6 +22,7 @@
 #include "ui/message_center/public/cpp/notification_types.h"
 
 using message_center::Notification;
+using session_manager::SessionState;
 
 namespace ash {
 namespace {
@@ -76,20 +80,19 @@ void LocaleNotificationDelegate::Click(
 
 }  // namespace
 
-LocaleNotificationController::LocaleNotificationController() = default;
+LocaleUpdateController::LocaleUpdateController() = default;
 
-LocaleNotificationController::~LocaleNotificationController() = default;
+LocaleUpdateController::~LocaleUpdateController() = default;
 
-void LocaleNotificationController::BindRequest(
-    mojom::LocaleNotificationControllerRequest request) {
+void LocaleUpdateController::BindRequest(
+    mojom::LocaleUpdateControllerRequest request) {
   bindings_.AddBinding(this, std::move(request));
 }
 
-void LocaleNotificationController::OnLocaleChanged(
-    const std::string& cur_locale,
-    const std::string& from_locale,
-    const std::string& to_locale,
-    OnLocaleChangedCallback callback) {
+void LocaleUpdateController::OnLocaleChanged(const std::string& cur_locale,
+                                             const std::string& from_locale,
+                                             const std::string& to_locale,
+                                             OnLocaleChangedCallback callback) {
   base::string16 from =
       l10n_util::GetDisplayNameForLocale(from_locale, cur_locale, true);
   base::string16 to =
@@ -100,6 +103,15 @@ void LocaleNotificationController::OnLocaleChanged(
       message_center::ButtonInfo(l10n_util::GetStringFUTF16(
           IDS_ASH_STATUS_TRAY_LOCALE_REVERT_MESSAGE, from)));
   optional.never_timeout = true;
+
+  for (auto& observer : observers_)
+    observer.OnLocaleChanged();
+
+  if (Shell::Get()->session_controller()->GetSessionState() ==
+      SessionState::OOBE) {
+    std::move(callback).Run(ash::mojom::LocaleNotificationResult::ACCEPT);
+    return;
+  }
 
   std::unique_ptr<Notification> notification = ash::CreateSystemNotification(
       message_center::NOTIFICATION_TYPE_SIMPLE, kLocaleChangeNotificationId,
@@ -114,6 +126,14 @@ void LocaleNotificationController::OnLocaleChanged(
       message_center::SystemNotificationWarningLevel::NORMAL);
   message_center::MessageCenter::Get()->AddNotification(
       std::move(notification));
+}
+
+void LocaleUpdateController::AddObserver(LocaleChangeObserver* observer) {
+  observers_.AddObserver(observer);
+}
+
+void LocaleUpdateController::RemoveObserver(LocaleChangeObserver* observer) {
+  observers_.RemoveObserver(observer);
 }
 
 }  // namespace ash
